Actualizar configuración: gitignore, database, settings y eliminar logs

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,24 @@
-# Database Configuration
-DB_HOST=localhost
+# =====================================================
+# 🏨 CONFIGURACIÓN - EJEMPLO (COPIAR A .env Y EDITAR)
+# =====================================================
+
+# === DESARROLLO LOCAL (PostgreSQL local) ===
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_NAME=hotel_bd
+# DB_USER=postgres
+# DB_PASSWORD=tu_contraseña_local
+
+# === PRODUCCIÓN (Neon - PostgreSQL en la nube) ===
+DB_HOST=ep-morning-pine-123456.us-east-2.aws.neon.tech
 DB_PORT=5432
-DB_NAME=hotel_db
-DB_USER=postgres
-DB_PASSWORD=postgres
+DB_NAME=neondb
+DB_USER=tu_usuario_neon
+DB_PASSWORD=tu_contraseña_neon
 
 # App Configuration
+APP_NAME=Sistema de Gestión Hotelera
+APP_VERSION=1.0.0
 SECRET_KEY=your-secret-key-here-change-in-production
-APP_ENV=development
-DEBUG=True
+APP_ENV=production  # development o production
+DEBUG=False  # True o False
