--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@
 # =====================================================
 
 # Core
+setuptools==69.5.1  # 👈 NUEVO - necesario para instalar otros paquetes
 streamlit==1.28.1
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9
-pandas==2.0.3          # 👈 CAMBIADO
-numpy==1.24.3          # 👈 CAMBIADO
+pandas==2.0.3
+numpy==1.24.3
 
 # Database
 SQLAlchemy==2.0.23
