--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,15 @@
 # =====================================================
-# 🏨 CONFIGURACIÓN - EJEMPLO (COPIAR A .env Y EDITAR)
+# 🏨 SISTEMA DE GESTIÓN HOTELERA - SECRETS
 # =====================================================
 
-# === DESARROLLO LOCAL (PostgreSQL local) ===
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=hotel_bd
-# DB_USER=postgres
-# DB_PASSWORD=tu_contraseña_local
+# === DATOS DE CONEXIÓN A NEON ===
+DB_HOST = "ep-mute-pond-aic2jswt-pooler.c-4.us-east-1.aws.neon.tech"
+DB_PORT = "5432"
+DB_NAME = "neondb"
+DB_USER = "neondb_owner"
+DB_PASSWORD = "npg_bqMBQag6xsR0"
 
-# === PRODUCCIÓN (Neon - PostgreSQL en la nube) ===
-DB_HOST=ep-morning-pine-123456.us-east-2.aws.neon.tech
-DB_PORT=5432
-DB_NAME=neondb
-DB_USER=tu_usuario_neon
-DB_PASSWORD=tu_contraseña_neon
-
-# App Configuration
-APP_NAME=Sistema de Gestión Hotelera
-APP_VERSION=1.0.0
-SECRET_KEY=your-secret-key-here-change-in-production
-APP_ENV=production  # development o production
-DEBUG=False  # True o False
+# === CONFIGURACIÓN DE LA APLICACIÓN ===
+APP_ENV = "production"
+DEBUG = "False"
+SECRET_KEY = "una-clave-secreta-muy-larga-y-aleatoria-2024"
